  should open an experiment file.
- Associate the mtft file extension on macOS with the GUI app, meaning you can
  double click on a mtft file and it'll open with the app. The mtft files also
  display with the GUI icon.
- BUG: an error was experienced whilst reprocessing an existing chain in the
  refnx GUI.
- BUG: fix gh336, remember the dq/q choice on reloading an experiment file.
  Previously the GUI reverted to constant dq/q on a reload, even if it was
  deselected.

0.1.22
------
- Added polarisation reduction (Oliver Paull)
- Introduce Objective.auxiliary_params. These are extra parameters that are
  modified during the calculation of Objective statistics, and are varied
  during a fit, but may not be directly part of Model calculating a signal.
  Their main purpose is to aid in creating constraints.
- Add example to show how to co-refine non-spinflip NR data.
- Silenced warning during test from slow reflectivity calculation, which
  erroneously gave the impression that the C based kernel wasn't available.

0.1.23
------
- bugfix: remove printing of auxiliary parameters in Objective.setp. A remnant
  print function was in that method. However, those parameters aren't present
  in a global objective, which caused an AttributeError.

0.1.24
------
- use oldest-supported-numpy to ensure that older numpy versions are used to
  build refnx wheels. This will allow refnx to be used with more recent
  versions as well as the oldest version supported on a given Python version.
  Previously refnx wheels were built with the newest numpy available at
  build time, and were probably not compatible with older numpy versions.
- Rejig the build process to make macOS universal wheels.

0.1.25
------
- Add NPY_NO_DEPRECATED_API=NPY_1_7_API_VERSION define to cython extension
  building to remove warnings. This requires a different mode of access to
  the array data.
- Fixed drag and drop of datasets onto refnx GUI
- Add OrsoDataset and a generalised load_data function