@@ -386,5 +386,7 @@ in 0.1.13.
 - Add NPY_NO_DEPRECATED_API=NPY_1_7_API_VERSION define to cython extension
   building to remove warnings. This requires a different mode of access to
   the array data.
-- Fixed drag and drop of datasets onto refnx GUI
-- Add OrsoDataset and a generalised load_data function
+- Fixed drag and drop of datasets onto refnx GUI.
+- Add OrsoDataset and a generalised load_data function.
+- refnx GUI removes horizontal scrollbar.
+- Fixed crash when trying to access version numbers when saving expt file.
